2011-10-18  Kaz Kylheku  <kaz@kylheku.com>

	Task #11425

	* match.c (spec_bind): New macro.
	(v_freeform): New function.
	(match_files): Freeform logic moved to function.
	(dir_tables_init): v_freeform entered into table.

2011-10-18  Kaz Kylheku  <kaz@kylheku.com>

	Task #11425

	* match.c (same_data_k): Symbol variable renamed to next_spec_k.
	(v_skip): Restructured not to return next_spec_k when there
	are no more specs, but rather thread directly to what match_file
	will do anyway, namely return the bindings and data position.
	(v_trailer): New functions.
	(match_files): Trailer logic moved to function.
	(syms_init): Follows renaming of variable.
	(dir_tables_init): GC bugfix: did not protect global hash
	tables again, like in filter.c previously.

2011-10-17  Kaz Kylheku  <kaz@kylheku.com>

	Task #11425

	Vertical skip directive moved into function dispatched
	via hash table. Test suite passes.

	* lib.c (cptr_s): New symbol variable.
	(cptr_equal_op): New static function.
	(cptr_equal_op, cptr, cptr_get): New functions.
	(cptr_ops): New static structure.
	(obj_init): New variable initialized.

	* lib.h (cptr_s, cptr, cptr_get): Declared.

	* match.c (decline_k, same_data_k): New symbol variables.
	(v_match_func): New typedef.
	(v_skip): New function.
	(match_files): Check symbol in v_directive_table and dispatch
	the associated function if an entry exists.
	Skip directive handling moved to v_skip function.
	(syms_init): Initialize new symbol variables.
	(dir_tables_init): Enter v_skip into v_directive_table under
	skip_s symbol.

2011-10-16  Kaz Kylheku  <kaz@kylheku.com>

	Quick and dirty port to MinGW.

	* configure: Test for presence of <sys/wait.h> added.
	Conditionally generates HAVE_SYS_WAIT variable in config.h.

	* stream.c: Include <sys/wait.h> conditionally.
	(pipe_close): Do not test ermination status with WIFEXITED, etc.
	if there is no <sys/wait.h> header.

2011-10-16  Kaz Kylheku  <kaz@kylheku.com>
